# secure-cpp-microservice-app

./: .gitignore  CMakeLists.txt  Dockerfile  ProjectFlow.txt  README.md  vcpkg.json
.github/workflows/: deploy.yml  integration.yml
certs/: server.crt  server.key
include/: config.h  metrics.h  server.h
src/: config.cpp  main.cpp  metrics.cpp  server.cpp
tests/: metrics_test.cpp
